# rpi_kubernetes

./: .gitignore  DEPLOYMENT_STATUS.md  GRAFANA_PORT_FIX.md  LICENSE  README.md  cluster-config.example.yaml  cluster-config.yaml  fix_grafana_port.py  fix_port3000.ps1  k3s_token.txt  kubeconfig.yaml  patch-mlflow-svc.json
.prompts/: additional_services.md  inital_prompt.md
ansible/: README.md  ansible.cfg
ansible/inventory/: cluster.example.yml
ansible/playbooks/: auto-mount-storage.yml  bootstrap.yml  k3s-install.yml  storage-setup.yml
bootstrap/: README.md
docs/: data-pipeline-recipes.md  extending-framework.md  hardware-assembly.md  mlops-workflows.md  observability-stack.md  raspberry-pi-setup.md  setup-guide.md  vector-stores.md
kubernetes/: kustomization.yaml
management/backend/: Dockerfile  README.md  pyproject.toml
management/backend/src/: __init__.py  config.py  main.py
management/backend/src/api/: __init__.py  cluster.py  deployments.py  hardware.py  health.py  mlflow.py
management/backend/src/models/: __init__.py  cluster.py  deployments.py  hardware.py
management/backend/src/services/: __init__.py  deployment_service.py  hardware_service.py  kubernetes_service.py  minio_service.py  mlflow_service.py
management/backend/src/telemetry/: __init__.py  setup.py  tracing.py
pipelines/: Dockerfile  README.md  __init__.py  chunking.py  cli.py  config.py  document_loaders.py  embeddings.py  minio_io.py  postgres_io.py  requirements.txt  retrieval.py  sources.py  tasks.py  vector_io.py
scripts/: update-hosts.ps1
(+211 files in other folders)
